<resources>
    <string name="app_name">MyNAvigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_events">Events</string>
    <string name="botinical_garden">Botinical Garden</string>
    <string name="botanical">Nice botanical garden with a free part at the outside, and a small admission for the glasshouse with tropical plants and the butterfly house</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="log_out">Log Out</string>
    <string name="tivoli">Bring the a friend to Tivoli Friheden in Aarhus and try the many rides, the park has to offer.</string>
    <string name="tivoli_rhus">Tivoli Århus</string>
    <string name="tivoli_aarhus">Tivoli Aarhus</string>
    <string name="the_derk_park">The Derk Park</string>
    <string name="derrpark">Marselisborg Deer Park is not a deer park in the original sense, as it is not meant for hunting deer. The idea is more like a small safari park.</string>
    <string name="bt">Botanical Garden</string>
    <string name="AddProfile">Add profile to meet new friends</string>
    <string name="back_to_homepage">Back to homepage</string>
    <string name="aros">Discover 10 floors of art and the city\'s best views from Your rainbow panorama on the ARoS roof.</string>
    <string name="help_and_feedback">Help and feedback</string>
    <string name="menu_helpandfeedback">Help and feedback</string>
    <string name="contact">Should you have any questions or concerns, please contact us</string>
    <string name="number">80 80 80 80</string>
    <string name="thomas_helmig">Thomas helmig</string>
    <string name="th" />
    <string name="thomas">thomas</string>
    <string name="events">Events</string>
    <string name="concerts">Concerts</string>


</resources>