<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="260dp"
        android:layout_height="240dp"
        android:src="@drawable/friendfinder"
        android:layout_marginTop="60dp"
        android:layout_margin="70dp"/>


    <EditText
        android:id="@+id/fragment_loginregister_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id ="@+id/fragment_loginregister_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/fragment_loginregister_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="signIn"
        android:backgroundTint="@color/myother"/>

    <Button
        android:id="@+id/fragment_loginregister_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/myother"
        android:text="@string/register" />

</LinearLayout>