<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mynavigation.view.FriendsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mynavigation.view.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.mynavigation.view.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_helpfeedback"
        android:name="com.example.mynavigation.view.HelpAndFeedbackFragment"
        android:label="@string/menu_helpandfeedback"
        tools:layout="@layout/fragment_helpfeedback" />


    <fragment
        android:name="com.example.mynavigation.view.LoginRegisterFragment"
        android:id="@+id/loginRegisterFragment"
        android:label="LoginRegisterFragment" >
        <action
            android:id="@+id/action_loginRegisterFragment_to_loggedInFragment"
            app:destination="@id/loggedInFragment" />
    </fragment>
    <fragment
        android:name="com.example.mynavigation.view.LoggedInFragment"
        android:id="@+id/loggedInFragment"
        android:label="LoggedInFragment" >
        <action
            android:id="@+id/action_loggedInFragment_to_loginRegisterFragment"
            app:destination="@id/loginRegisterFragment" />
    </fragment>
    <fragment
        android:name="com.example.mynavigation.DetailFragment"
        android:id="@+id/DetailFragment"
        android:label="DetailFragment" >
    </fragment>
</navigation>