<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddd"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/android_card_view_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightblue"
            android:padding="16dp">

            <ImageView
                android:id="@+id/e1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/e1" />

            <TextView
                android:id="@+id/text_events"
                style="@style/UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="21dp"
                android:layout_toEndOf="@id/e1"
                android:layout_toRightOf="@id/e1"
                android:text="@string/bt"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/short_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/e1"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="-61dp"
                android:layout_toEndOf="@+id/e1"
                android:layout_toRightOf="@+id/e1"
                android:text="@string/botanical"
                android:textColor="@color/black" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/android_card_view_example1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightblue"
            android:padding="16dp">

            <ImageView
                android:id="@+id/e2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/e2" />

            <TextView
                android:id="@+id/text_events2"
                style="@style/UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="21dp"
                android:layout_toEndOf="@id/e2"
                android:layout_toRightOf="@id/e2"
                android:text="@string/tivoli_aarhus"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/short_description2"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/e2"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="-61dp"
                android:layout_toEndOf="@+id/e2"
                android:layout_toRightOf="@+id/e2"
                android:text="@string/tivoli"
                 />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/android_card_view_example3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightblue"
            android:padding="16dp">

            <ImageView
                android:id="@+id/e3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/e3" />

            <TextView
                android:id="@+id/text_events3"
                style="@style/UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="21dp"
                android:layout_toEndOf="@id/e3"
                android:layout_toRightOf="@id/e3"
                android:text="@string/the_derk_park"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/short_description3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/e3"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="-61dp"
                android:layout_toEndOf="@+id/e3"
                android:layout_toRightOf="@+id/e3"
                android:text="@string/derrpark"
                android:textColor="@color/black" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/android_card_view_example4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightblue"
            android:padding="16dp">

            <ImageView
                android:id="@+id/e4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/e4" />

            <TextView
                android:id="@+id/text_events4"
                style="@style/UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="21dp"
                android:layout_toEndOf="@id/e4"
                android:layout_toRightOf="@id/e4"
                android:text="Aros museum"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/short_description4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/e4"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="-61dp"
                android:layout_toEndOf="@+id/e4"
                android:layout_toRightOf="@+id/e4"
                android:text="@string/aros"
                android:textColor="@color/black" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>
